--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "restrau",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mittalxdesecrater.github.io/Restraunt-Menu-Card",
+  "homepage": "https://mittalxdesecrater.github.io/Menu-Card",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
